# pandora_ros_pkgs

./: .gitignore  .jenkins.yml  .travis.yml  README.md
pandora_audio/pandora_audio/: CMakeLists.txt  package.xml
pandora_audio/pandora_audio_msgs/: CMakeLists.txt  package.xml
pandora_audio/pandora_audio_msgs/msg/: AudioData.msg
pandora_audio/pandora_kinect_audio_capture/: CMakeLists.txt  package.xml  setup.py
pandora_audio/pandora_kinect_audio_capture/config/: capture_topics.yaml  common_params.yaml  monitor_topics.yaml
pandora_audio/pandora_kinect_audio_capture/launch/: capture.launch  monitor.launch  record.launch
pandora_audio/pandora_kinect_audio_processing/: CMakeLists.txt  package.xml  setup.py
pandora_audio/pandora_kinect_audio_processing/config/: processing_params.yaml  processing_topics.yaml
pandora_audio/pandora_kinect_audio_processing/launch/: process.launch
pandora_common/common_communications/: CMakeLists.txt  package.xml
pandora_common/distrib_msgs/: CMakeLists.txt  package.xml
pandora_common/distrib_msgs/msg/: flirLeptonMsg.msg
pandora_common/kinect_movement_filter/: CMakeLists.txt  package.xml
pandora_common/kinect_movement_filter/config/: kinect_movement_filter.yaml
pandora_common/kinect_movement_filter/launch/: kinect_movement_filter.launch
pandora_common/kinect_movement_filter/src/: kinect_movement_filter.cpp
pandora_common/pandora_cmake_tools/: CMakeLists.txt  package.xml
pandora_common/pandora_cmake_tools/cmake/: download_data.cmake.em
pandora_common/pandora_cmake_tools/scripts/: download_checkmd5.py  parse_extra_files.py
pandora_common/pandora_common/: CMakeLists.txt  package.xml
pandora_common/pandora_common_msgs/: CMakeLists.txt  package.xml
pandora_common/pandora_common_msgs/msg/: GeneralAlert.msg  GeneralAlertInfo.msg  GeneralAlertVector.msg
pandora_common/pandora_gui_msgs/: CMakeLists.txt  package.xml
pandora_common/pandora_gui_msgs/action/: ValidateVictimGUI.action
pandora_common/pandora_testing_tools/: CMakeLists.txt  package.xml  setup.py
pandora_common/remote_mutex/: CMakeLists.txt  package.xml
pandora_common/remote_mutex/include/: mutex_guard.h  (+1 more)
pandora_common/remote_mutex_msgs/: CMakeLists.txt  package.xml
pandora_common/sensor_processor/: CMakeLists.txt  package.xml
pandora_common/state_manager/: CMakeLists.txt  package.xml  setup.py
pandora_control/: CMakeLists.txt  README.md  package.xml
pandora_control/config/: pandora_control.yaml
pandora_control/include/: stabilizer_control.h
pandora_control/launch/: kinect_control.launch  pandora_control.launch  stabilizer_control.launch
pandora_control/pandora_control/: CMakeLists.txt  package.xml
pandora_control/pandora_dummy_motor_controller/: CMakeLists.txt  package.xml
pandora_control/pandora_end_effector_controller/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_end_effector_planner/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_kinect_control/: CMakeLists.txt  package.xml
pandora_control/pandora_laser_control/: CMakeLists.txt  package.xml
pandora_control/pandora_linear_actuator_controller/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_linear_movement_controller/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_motion_control/: CMakeLists.txt  install_dep  package.xml  requirements.txt  rl_tips  setup.py
pandora_control/pandora_motor_control/: CMakeLists.txt  package.xml
pandora_control/pandora_sensor_orientation_controller/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_stabilizer/: CMakeLists.txt  package.xml  setup.py
pandora_control/pandora_teleop/: CMakeLists.txt  package.xml
pandora_control/scripts/: joystick_teleop.py  kinematic.py
pandora_control/src/: kinect_control_node.cpp  stabilizer_control.cpp  stabilizer_control_node.cpp
pandora_fsm/: .gitignore  .jenkins.yml  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
pandora_fsm/config/: params.cfg  strategies.json
pandora_fsm/fsm_communications/: CMakeLists.txt  package.xml
pandora_fsm/launch/: agent_functional_tests.launch  agent_mocks.launch  agent_standalone.launch  agent_unit_tests.launch  fsm_functional_test.launch
pandora_fsm/pandora_fsm/: CMakeLists.txt  package.xml  setup.py
pandora_fsm/src/: agent_standalone.py  mocks.py  victim_validator.cpp
pandora_fsm/tests/: agent_behavioral_test.py  agent_functional_tests.py  agent_state_tests.py  agent_unit_tests.py  communications.py  framework_test.py  fsm_functional_test.py  global_vars.py  mock_action_clients.py  mock_msgs.py  mock_publishers_subscribers.py  multiple_event_handler_test.py  state_handler_tests.py
pandora_launchers/: CMakeLists.txt  README.md  package.xml
pandora_rqt_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
pandora_rqt_gui/action/: ValidateVictimGUI.action
pandora_rqt_gui/resources/: BatteryWidget.ui  CO2Widget.ui  ProbabilityInfo.ui  Sonars.ui  StandarWidget.ui  TempWidget.ui
pandora_rqt_gui/scripts/: pandora_rqt_gui.py
pandora_rqt_gui/test/: listener.py  talker.py  victim_action_client.py  victim_propabilities.py
pandora_visualization/: .jenkins.yml  CMakeLists.txt  README.md  package.xml
pandora_visualization/config/: interactive_command_publisher_marker.yaml  interactive_tf_publisher_marker.yaml
pandora_visualization/launch/: interactive_command_publisher_marker.launch  interactive_tf_publisher_marker.launch  visualization.launch
pandora_visualization/pandora_geotiff/: CMakeLists.txt  package.xml
pandora_visualization/pandora_geotiff_plugins/: CMakeLists.txt  package.xml  pandora_geotiff_plugins.xml
pandora_visualization/pandora_interactive_markers/: CMakeLists.txt  package.xml
pandora_visualization/pandora_qr_csv/: CMakeLists.txt  package.xml
pandora_visualization/pandora_runtime_visualization/: CMakeLists.txt  package.xml
pandora_visualization/pandora_visualization/: CMakeLists.txt  package.xml
pandora_visualization/src/: data_fusion_object_visualization.cpp  navigation_visualization.cpp  temprature_visualization.cpp
(+2950 files in other folders)
