<package format="2">
  <name>pandora_fsm</name>
  <version>0.3.7</version>

  <description>pandora_fsm</description>

  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_fsm/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_fsm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>rospy</depend>
  <depend>move_base_msgs</depend>
  <depend>pandora_data_fusion_msgs</depend>
  <depend>pandora_exploration_msgs</depend>
  <depend>pandora_gui_msgs</depend>
  <depend>pandora_end_effector_controller</depend>
  <depend>state_manager</depend>
  <depend>state_manager_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>

  <depend>dynamic_reconfigure</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
