<?xml version="1.0"?>
<package>
  <name>pandora_launchers</name>
  <version>0.0.0</version>
  <description>Contains launchers for easy bringup</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_launchers/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_launchers</url>

  
  <author>Chris Zalidis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
 <run_depend>pandora_visualization</run_depend> 
 <run_depend>pandora_navigation</run_depend> 
 <run_depend>pandora_slam</run_depend> 
 <run_depend>pandora_vision</run_depend> 
 <run_depend>pandora_data_fusion</run_depend> 
 <run_depend>pandora_control</run_depend> 
 <run_depend>pandora_sensors</run_depend> 
 <run_depend>pandora_models</run_depend> 


  <export>

  </export>
</package>
