<package format="2">
  <name>pandora_rqt_gui</name>
  <version>0.1.0</version>
  <description>Rqt gui implementation for remote introspection of PANDORA UGV.</description>

  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <author>Chamzas Konstantinos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>

  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>std_msgs</depend>

  <depend>actionlib_msgs</depend>
  <depend>pandora_data_fusion_msgs</depend>
  <depend>pandora_sensor_msgs</depend>
  <depend>state_manager</depend>
  <depend>state_manager_msgs</depend>

  <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
