<package format="2">
  <name>pandora_rqt_gui</name>
  <version>0.1.0</version>
  <description>Rqt gui implementation for remote introspection of PANDORA UGV.</description>

  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <author>Chamzas Konstantinos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>pandora_data_fusion_msgs</exec_depend>
  <exec_depend>pandora_sensor_msgs</exec_depend>
  <exec_depend>pandora_sensor_msgs</exec_depend>
  <exec_depend>state_manager</exec_depend>
  <exec_depend>state_manager_msgs</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
