<package format="2">
  <name>pandora_rqt_gui</name>
  <version>0.2.0</version>
  <description>Rqt gui implementation for remote introspection of PANDORA UGV.</description>

  <maintainer email="siderisk@auth.gr">Sideris Konstantinos</maintainer>

  <license>BSD</license>

  <author>Chamzas Konstantinos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pandora_data_fusion_msgs</exec_depend>
  <exec_depend>pandora_geotiff</exec_depend>
  <exec_depend>pandora_gui_msgs</exec_depend>
  <exec_depend>pandora_sensor_msgs</exec_depend>
  <exec_depend>state_manager_msgs</exec_depend>

  <depend>rospy</depend>
  <depend>rqt_gui</depend>

  <export>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
