<?xml version="1.0"?>
<package>
  <name>pandora_visualization</name>
  <version>0.0.0</version>
  <description>pandora_visualization package contains code for visualization and launchers</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_visualization/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_visualization</url>

  
  <author>Triantafyllos Afouras, Manos Tsardoulias</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  

 <build_depend>roscpp</build_depend> 
 <build_depend>tf</build_depend> 
 <build_depend>visualization_msgs</build_depend> 
 <build_depend>pandora_data_fusion_msgs</build_depend> 
 
 <run_depend>roscpp</run_depend> 
 <run_depend>tf</run_depend> 
 <run_depend>visualization_msgs</run_depend> 
 <run_depend>pandora_data_fusion_msgs</run_depend> 
 <run_depend>rviz</run_depend> 

  <export>

  </export>
</package>
