<?xml version="1.0"?>
<package format="2">
  <name>kinect_movement_filter</name>
  <version>0.0.0</version>
  <description>This package uses joint_states to provide
      a still image when the kinect sensor is not moving.</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>

  <export>
  </export>
</package>
