<package format="2">
  <name>pandora_common</name>
  <version>0.0.0</version>
  <description>Containts pandora common packages</description>

  <maintainer email="afourast@gmail.com">afourast</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>state_manager</exec_depend>
  <exec_depend>state_manager_msgs</exec_depend>
  <exec_depend>watchdog</exec_depend>
  <exec_depend>watchdog_msgs</exec_depend>
  <exec_depend>remote_mutex</exec_depend>
  <exec_depend>remote_mutex_msgs</exec_depend>
  <exec_depend>pandora_common_msgs</exec_depend>
  <exec_depend>kinect_movement_filter</exec_depend>
  <exec_depend>pandora_testing_tools</exec_depend>
  <exec_depend>pandora_cmake_tools</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
