<?xml version="1.0"?>
<package>
  <name>pandora_common_msgs</name>
  <version>0.0.0</version>
  <description>pandora_common_msgs</description>
  <maintainer email="chritsir@auth.gr">Tsirigotis Christos</maintainer> 

  <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>

    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>

  <author>pandora</author>

  <export>

  </export>
</package>
