<?xml version="1.0"?>
<package>
  <name>pandora_common_msgs</name>
  <version>0.0.0</version>
  <description>Common messages, used by various packages.</description>
  
  <maintainer email="chritsir@auth.gr">Tsirigotis Christos</maintainer> 

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common</url>

  <author>Tsirigotis Christos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
  
</package>
