<package format="2">
  <name>pandora_gui_msgs</name>
  <version>0.0.0</version>
  <description>Pandora gui messages, used by agent and rqt_gui</description>

  <maintainer email="chritsir@auth.gr">Tsirigotis Christos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common.git</url>

  <author>Tsirigotis Christos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>

</package>

