<package format="2">
  <name>pandora_testing_tools</name>
  <version>0.0.1</version>
  <description>pandora's testing tools</description>
  <maintainer email='tsirif@gmail.com'>Tsirigotis Christos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common.git</url>

  <author>Afouras Triantafyllos</author>
  <author>Tsirigotis Christos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>pkg-config</build_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>rosbag</depend>
  <depend>map_server</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
